# SVMA

./: CMakeLists.txt
app/: main.cc
bench/: conv_testbench.cc  makefile  svma_testbench.cc  uninterpreted_func.cc
bench/sim_info/: bc_linear.json  bc_poly2.json  bc_poly4.json  bc_prec_linear.json  bc_prec_poly.json  bc_rbf.json  instr_log_svma.txt  mnist_linear.json  mnist_poly2.json  mnist_poly4.json  mnist_prec_linear.json  mnist_prec_poly.json  mnist_rbf.json  test_input_svma.json  test_input_svma_linprec.json  test_input_svma_poly2.json  test_input_svma_poly4.json  test_input_svma_polyprec.json  test_input_svma_rbf.json
include/: svma_ila.h  uninterpreted_func.h
src/: svm_2poly_child.cc  svm_2poly_reform_child.cc  svm_4poly_child.cc  svm_ila.cc  svm_linear_child.cc  svm_linear_reform_child.cc  svm_rbf_child.cc
uninterpreted_func/: uninterpreted_func.cc  uninterpreted_func_placeholder.cc
